--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ channels:
 - conda-forge
 dependencies:
 - python
-- pyiron_base =0.5.7
+- pyiron_base =0.6.22
 - jupyter
-- pip:
-   - git+https://github.com/pyiron/pyiron_base.git@dynamic_template_job
+- pip
+- versioneer
